fix table overflow-y

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     margin: 0 0 0 5em;
     padding-top: 11vh;
+    overflow-y: auto;
 }
 #main > h2 {
     width: 80%;
