--- a/src/assets/styles/table.module.css
+++ b/src/assets/styles/table.module.css
@@ -12,10 +12,11 @@
   }
   
   .table {
-    margin: 1em 0 40px 0;
+    margin: 1em 0 40px 10px;
     width: 100%;
     display: table;
     color: #ffffff;
+    
   }
   @media screen and (max-width: 580px) {
     .table {
